# ffmpeg-openCV-movement-detection

./: CMakeLists.txt  main.cpp
